crates/cli/tests/snapshots/lib__check@missing_field.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/missing_field.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/missing_field.nemo
---
success: false
exit_code: 1
----- stdout -----
[14] Error: Missing field. F.x was not provided
   ╭─[ tests/check/missing_field.nemo:6:3 ]
   │
 6 │   F { }
   │   ┬  
   │   ╰── Missing field. F.x was not provided
───╯


----- stderr -----
Error: "Check failed with 1 errors"
